# LLM-Eval

./: .gitignore  pyproject.toml
DeepEval/.deepeval/: .deepeval_telemetry.txt
DeepEval/Relevancy/: answer-relevancy.ipynb  harry_potter_qa_dataset.json  test_answer-relevancy.py
DeepEval/Relevancy/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
RAG/dataset/: val.ipynb
RAG/document-loaders/: cleaned_output.txt  unstructed_pdf.ipynb
RedTeam/: red-team.ipynb
RedTeam/.deepeval/: .deepeval_telemetry.txt
RedTeam/deepteam/results/: 20260310_151139.json
