[project]
name = "llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "datasets>=4.6.1",
    "deepeval>=3.8.9",
    "deepteam>=1.0.6",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-pymupdf4llm>=0.5.0",
    "pandas>=3.0.1",
    "pdfminer-six==20221105",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "transformers>=5.3.0",
    "unstructured>=0.21.5",
]
